--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,60 @@ caption {
   vertical-align: baseline;
 }
 
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The\ Jamsil\ 1\ Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The\ Jamsil\ 2\ Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The Jamsil 3 Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The Jamsil 4 Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The Jamsil 5 Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'The Jamsil';
+  src: url('/public/assets/fonts/The Jamsil 6 ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+/* 기본 페이지 스타일 초기화 및 폰트 적용 */
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  font-family: 'The Jamsil', sans-serif; /* 기본 폰트를 The Jamsil로 설정 */
+  line-height: 1.5;
+  background: #fff;
+  color: #333;
+}
+
