--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,9 @@
 
 body, html, #root {
   margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: Arial, sans-serif;
+  font-family: 'The Jamsil', sans-serif; /* 전역 폰트 설정 */
+  background: #fff;
+  color: #333;
 }
 
 
