--- a/src/pages/MainPage.module.css
+++ b/src/pages/MainPage.module.css
@@ -4,7 +4,7 @@
 .container {
   position: relative;
   width: 100%;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
 }
 
 /* 이미지 컨테이너 수정:
