--- a/src/pages/MainPage.module.css
+++ b/src/pages/MainPage.module.css
@@ -49,15 +49,18 @@
    - 위치는 고정, 중앙 배치 */
 .centerText {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 60%;
+  left: 40%;
   transform: translate(-50%, -50%); /* 중앙정렬 보편값 */
   z-index: 0;
   color: #fff;
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: bold;
   pointer-events: none;
   text-align: center;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color:#333;
+  
 }
 
 /* 헤더 */
