--- a/src/components/Chat/LeftSidebar.module.css
+++ b/src/components/Chat/LeftSidebar.module.css
@@ -1,5 +1,10 @@
+/* LeftSidebar.module.css */
 .container {
-  padding: 20px;
+  height: 100vh;        /* 높이를 100vh */
+  overflow-y: auto;     /* 내용이 많아질 경우만 스크롤 */
+  /* padding-top: 20px; */
+  padding-left: 20px;
+  padding-right: 20px;
   background-color: green; /* 녹색 배경 */
 }
 
