--- a/src/components/Chat/RightSidebar.module.css
+++ b/src/components/Chat/RightSidebar.module.css
@@ -1,6 +1,11 @@
+/* RightSidebar.module.css */
 .container {
-  padding: 20px;
-  background-color: red; /* 빨간색 배경 */
+  height: 100vh;        /* 높이를 100vh */
+  overflow-y: auto;     /* 내용이 많아질 경우만 스크롤 */
+  /* padding-top: 20px; */
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: red; /* 녹색 배경 */
 }
 
 .ul {
