--- a/src/pages/MinWow.css
+++ b/src/pages/MinWow.css
@@ -60,21 +60,25 @@
 
 
 .join-container .join_area .img_ham {
-    width: 40%;
+    width: 50%;
+    height: 100%;  /* 높이도 설정하여 이미지가 잘리거나 압축되지 않도록 */
     background-image: url('../assets/img2/joinImg.jpg');
-    background-size: 100% 100%;
+    background-size: auto 100%;  /* 높이에 맞추고, 너비는 원본 비율을 유지하며 자동 조정 */
+    background-position: +60% center; /* 이미지를 왼쪽으로 10% 이동 */
 }
 .join-container .join_area .joinForm-container {
     width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #FFF0DC;
 }
 
 .join-container .join_area .joinForm-container .joinForm {
     padding-left: 50px;
-    width: 550px;
+    width: 400px;
     height: 500px;
+    
 }
 
 .join-container .join_area .joinForm-container .joinForm .ham-area {
@@ -82,6 +86,7 @@
     position: relative; /* label 위치 조정을 위해 position 사용 */
     margin-top: 30px;
     cursor: pointer;
+    
 }
 
 .join-container .join_area .joinForm-container .joinForm .ham-area .seedImg {
@@ -125,7 +130,7 @@
     top: -2px;
     left: 10px;
     font-size: 13px;
-    color: #166cea;
+    color: #ea9516;
 }
 
 .join-container .join_area .joinForm-container .joinForm .ham-area label.warning {
