--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,79 +1,123 @@
-*
-{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+
+
+
+/* .background-container .cube {
+    position: fixed;
+    transform-origin: center;
+    will-change: transform;
+} */
+
+
+.main-content .back-area {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
+    clip-path: inset(0);
 }
-body
-{
-	min-height: 100vh;
-	background: #000;
-}
-.main-container .main-content .hexagon-container
-{
-	top:300px;
-	position: absolute;
+
+
+.back-area {
+
+	position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+	top: 500px;
+	left: 800px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100vw;
 	height: 100vh;
-	overflow: hidden;
-	animation: animate 4s linear infinite;
+
+	background: #555;
 }
-@keyframes animate
-{
-	0%
-	{
+.background-container {
+
+    position: fixed;
+    top: 700px;
+    left: 950px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+
+	z-index: 3;
+	transform: skewY(-20deg);
+
+	width: 100vw;
+	height: 100%;
+}
+
+.background-container .cube {
+	position: relative;
+	translate: calc(var(--z) * 60px) calc(var(--z) * 60px);
+}
+
+.background-container .cube div {
+	position: absolute;
+	translate: calc(-70px * var(--x)) calc(-70px * var(--y));
+}
+
+.background-container .cube div span {
+	position: relative;
+	display: inline-block;
+	width: 50px;
+	height: 50px;
+	background: #fff;
+	transition: 1.5s;
+}
+
+.background-container .cube div span.active {
+	background: #ef4149;
+	transform: translate(0, -50px);
+	animation: animate 2s ease-in-out infinite;
+}
+
+.background-container .cube div span::before {
+	content: '';
+	position: absolute;
+	left: -40px;
+	width: 40px;
+	height: 100%;
+	background-color: #c8c8c8;
+	transform-origin: right;
+	transform: skewY(45deg);
+	transition: 1.5s;
+}
+
+.background-container .cube div span.active::before {
+	background: #f75d64;
+}
+
+.background-container .cube div span::after {
+	content: '';
+	position: absolute;
+	top: -40px;
+	left: 0;
+	width: 100%;
+	height: 40px;
+	background: #f2f2f2;
+	transform-origin: bottom;
+	transform: skewX(45deg);
+	transition: 1.5s;
+	box-shadow: -100px 100px 5px rgba(0, 0, 0, 0.15);
+}
+.background-container .cube div span.active::after {
+	background: #f14e55;
+	box-shadow: -150px 150px 5px rgba(0, 0, 0, 0.15);
+}
+
+@keyframes animate {
+	0% {
 		filter: hue-rotate(0deg);
 	}
-	100%
-	{
+	100% {
 		filter: hue-rotate(360deg);
 	}
-}
-.row
-{
-	display: inline-flex;
-	margin-top: -32px;
-	margin-left: -50px;
-}
-.row:nth-child(even)
-{
-	margin-left: 1px;
-}
-.hexagon
-{
-	position: relative;
-	width: 100px;
-	height: 110px;
-	background: #111;
-	margin: 2px;
-	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-	transition: 2s;
-}
-.hexagon:hover
-{
-	transition: 0s;
-	background: #0f0;
-}
-.hexagon:after
-{
-	content: '';
-	position: absolute;
-	top: 4px; 
-	bottom: 4px;
-	left: 4px;
-	right: 4px;
-	background: #111;
-	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-	z-index: 1;
-}
-.hexagon:before
-{
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 50%;
-	height: 100%;
-	pointer-events: none;
-	background: rgba(255,255,255,0.02);
-	z-index: 1000;
 }
