--- a/src/css/style.css
+++ b/src/css/style.css
@@ -240,34 +240,59 @@
 	overflow: hidden;
 }
 
+
+
+.main-content .main-content-introduction .content {
+    position: relative;
+}
+
+.main-content .main-content-introduction .content::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, transparent, rgba(0, 0, 0, 1));
+}
+
 .main-content .main-content-introduction .content {
 	width: 110%;
 	height: 100%;
-	background-color: #000;
 	z-index: 3;
 	overflow: hidden;
+
+	background: linear-gradient(to right, transparent, rgba(0, 0, 0, 1));
+	background-image: url('./img/cinema.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: start;
+}
+
+.main-content .main-content-introduction .content > div {
+	margin-bottom: 20px;
+	margin-left: 100px;
 }
 
 .main-content .main-content-introduction .content .title {
 	font-size: 50px;
 	font-weight: bold;
-	text-align: center;
 	color: #fff;
 }
 
 .main-content .main-content-introduction .content .subtitle {
 	font-size: 30px;
 	font-weight: bold;
-	text-align: center;
 	color: #fff;
 }
 
 .main-content .main-content-introduction .content .description {
+	margin-left: 300px;
 	font-size: 20px;
 	text-align: center;
 	color: #fff;
