--- a/src/css/style.css
+++ b/src/css/style.css
@@ -622,8 +622,7 @@
 
   /** main - 영화, 도서, 음악 등 컨첸츠 list 영역 */
   .main-container .main-content .main-page .main-page-content {
-	width: 100%;
-	height: 800px;
+	height: 1200px;
 	background-color: var(--background-color);
 
 	display: flex;
@@ -655,6 +654,7 @@
 
 
   .main-page-content-box .main-page-content-box-content {
+	padding: 0 20px;
 	/* width: 100%; */
 	height: 100%;
 
@@ -663,7 +663,7 @@
 	justify-content: start;
 
 	flex-wrap: nowrap;
-	overflow-x: initial;
+	overflow-x: auto;
   }
 /*** 영화, 도서, 음악 등 컨첸츠 item box 영역 */
 .mainPage-content-box
