--- a/src/css/style.css
+++ b/src/css/style.css
@@ -764,3 +764,100 @@
 {
     color: #000;
 }
+
+/** footter 영역 */
+footer {
+	width: 100%;
+	height: 500px;
+	background-color: black;
+}
+
+footer .footer-container {
+	padding: 50px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+footer .footer-container .footer-content {
+	width: 100%;
+}
+
+footer .footer-container .footer-content .footer-subject {
+	font-size: 50px;
+	font-weight: bold;
+	color: #fff;
+}
+
+footer .footer-container .footer-content .footer-content {
+	font-size: 20px;
+	color: #fff;
+}
+
+footer .footer-container .footer-content .footer-content p {
+	margin-top: 20px;
+}
+
+footer .footer-container .footer-content .footer-btn {
+	margin-top: 20px;
+	width: 100%;
+	height: 100px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+footer .footer-container .footer-btn .btn {
+	margin: 20px;
+	padding: 10px 10px 10px 30px;
+	width: 225px;
+	height: 60px;
+	border-radius: 20px;
+
+	background-color: red;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+	cursor: pointer;
+}
+
+footer .footer-container .footer-btn .btn .btn-icon {
+	width: 40px;
+	height: 30px;
+	background-image: url('./icon/github.png');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+footer .footer-container .footer-btn .btn .btn-text {
+	margin-left: 10px;
+	font-size: 20px;
+	color: #fff;
+	text-align: center;
+}
+
+footer .footer-container .footer-img {
+	margin-left: 150px;
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+}
+
+footer .footer-container .footer-img img {
+	width: 300px;
+	height: 200px;
+}
+
+
