--- a/src/css/style.css
+++ b/src/css/style.css
@@ -767,9 +767,11 @@
 
 /** footter 영역 */
 footer {
+	position: relative;
 	width: 100%;
 	height: 500px;
 	background-color: black;
+	z-index: 100;
 }
 
 footer .footer-container {
@@ -777,20 +779,39 @@ footer .footer-container {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
 footer .footer-container .footer-content {
 	width: 100%;
+	height: 100%;
 }
 
 footer .footer-container .footer-content .footer-subject {
-	font-size: 50px;
-	font-weight: bold;
-	color: #fff;
+	width: 100%;
+	height: 100px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+	cursor: pointer;
 }
+
+footer .footer-container .footer-content .footer-subject .footer-subject-img{
+	margin-right: 20px;
+	width: 300px;
+	height: 100px;
+	background-image: url('./img/mypick-logo.png');
+	background-size: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	cursor: pointer;
+}
+
+
 
 footer .footer-container .footer-content .footer-content {
 	font-size: 20px;
@@ -812,52 +833,45 @@ footer .footer-container .footer-content .footer-btn {
 	align-items: center;
 }
 
-footer .footer-container .footer-btn .btn {
-	margin: 20px;
-	padding: 10px 10px 10px 30px;
-	width: 225px;
-	height: 60px;
-	border-radius: 20px;
 
-	background-color: red;
-
+/** footer loading bar */
+.loading-hr {
+	position: relative;
 	display: flex;
-	flex-direction: row;
-	justify-content: start;
-	align-items: center;
-	cursor: pointer;
 }
 
-footer .footer-container .footer-btn .btn .btn-icon {
-	width: 40px;
-	height: 30px;
-	background-image: url('./icon/github.png');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+.loading-hr span {
+	position: relative;
+	width: 20px;
+	height: 5px;
+}
+.loading-hr span::before {
+	content: '';
+	position: absolute;
+	inset: 0;
+	background: #0f0;
+	box-shadow: 0 0 5px #0f0,
+	0 0 15px #0f0,
+	0 0 30px #0f0,
+	0 0 50px #0f0;
 }
 
-footer .footer-container .footer-btn .btn .btn-text {
-	margin-left: 10px;
-	font-size: 20px;
-	color: #fff;
-	text-align: center;
+.loading-hr.action span::before {
+	animation: hr-bar 8s linear infinite;
 }
 
-footer .footer-container .footer-img {
-	margin-left: 150px;
-	width: 100%;
-	height: 100%;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: start;
-	align-items: center;
+@keyframes hr-bar {
+	0% {
+		transform-origin: 0 20px;
+		filter: hue-rotate(0deg);
+	}
+	20% {
+		transform: rotate(calc(-90deg * var(--i)));
+	}
+	60% {
+		transform: rotate(calc(0deg * var(--i)));
+	}
+	100% {
+		transform: rotate(calc(0deg * var(--i)));
+	}
 }
-
-footer .footer-container .footer-img img {
-	width: 300px;
-	height: 200px;
-}
-
-
