--- a/src/css/style.css
+++ b/src/css/style.css
@@ -849,6 +849,18 @@ footer .footer-container .footer-content .footer-btn {
 	content: '';
 	position: absolute;
 	inset: 0;
+	background: #f00;
+	box-shadow: 0 0 5px #f00,
+	0 0 15px #f00,
+	0 0 30px #f00,
+	0 0 50px #f00;
+}
+
+
+.loading-hr.action-bar span::before {
+	content: '';
+	position: absolute;
+	inset: 0;
 	background: #0f0;
 	box-shadow: 0 0 5px #0f0,
 	0 0 15px #0f0,
@@ -856,7 +868,7 @@ footer .footer-container .footer-content .footer-btn {
 	0 0 50px #0f0;
 }
 
-.loading-hr.action span::before {
+.loading-hr.action-bar span::before {
 	animation: hr-bar 8s linear infinite;
 }
 
@@ -874,4 +886,56 @@ footer .footer-container .footer-content .footer-btn {
 	100% {
 		transform: rotate(calc(0deg * var(--i)));
 	}
+}
+
+.footer-subject-v {
+	position: relative;
+	margin-left: 20px;
+	display: flex;
+	align-items: center;
+}
+
+.footer-subject-v span {
+	position: absolute;
+	width: 20px;
+	height: 3px;
+	background: #f00;
+	box-shadow: 0 0 5px #f00,
+			  0 0 15px #f00,
+			  0 0 30px #f00,
+			  0 0 50px #f00;
+	transition: 1s ease-in-out;
+}
+
+.footer-subject-v.action-bar span {
+	position: absolute;
+	width: 20px;
+	height: 3px;
+	background: #0f0;
+	box-shadow: 0 0 5px #0f0,
+			  0 0 15px #0f0,
+			  0 0 30px #0f0,
+			  0 0 50px #0f0;
+}
+
+
+
+.footer-subject-v span:nth-child(1) {
+	transform: rotate(45deg) translate( 0px, 0px);
+	transition: 1s ease-in-out;
+}
+
+.footer-subject-v span:nth-child(2) {
+	transform: rotate(-45deg) translate( 10px, 10px);
+	transition: 1s ease-in-out;
+}
+
+.footer-subject-v.action-bar span:nth-child(1) {
+	transform: rotate(45deg) translate(10px, -10px);
+	transition: 1s ease-in-out;
+}
+
+.footer-subject-v.action-bar span:nth-child(2) {
+	transform: rotate(-45deg) translate( 0px, 0px);
+	transition: 1s ease-in-out;
 }
