--- a/src/css/style.css
+++ b/src/css/style.css
@@ -921,20 +921,100 @@ footer .footer-container .footer-content .footer-btn {
 
 .footer-subject-v span:nth-child(1) {
 	transform: rotate(45deg) translate( 0px, 0px);
-	transition: 1s ease-in-out;
+	transition: 0.5s ease-in-out;
 }
 
 .footer-subject-v span:nth-child(2) {
 	transform: rotate(-45deg) translate( 10px, 10px);
-	transition: 1s ease-in-out;
+	transition: 0.5s ease-in-out;
 }
 
 .footer-subject-v.action-bar span:nth-child(1) {
 	transform: rotate(45deg) translate(10px, -10px);
-	transition: 1s ease-in-out;
+	transition: 0.5s ease-in-out;
 }
 
 .footer-subject-v.action-bar span:nth-child(2) {
 	transform: rotate(-45deg) translate( 0px, 0px);
-	transition: 1s ease-in-out;
+	transition: 0.5s ease-in-out;
+}
+
+.footer-container .footer-content p.footer-content {
+	margin-top: 20px;
+	height: 0;
+	opacity: 0;
+	transition: 0.8s ease-in-out;
+	transform: translateY(-100%);
+}
+
+.footer-container .footer-content p.footer-content.action-bar {
+	margin-top: 20px;
+	opacity: 1;
+	transform: translateY(0);
+	transition: 0.8s ease-in-out;
+}
+
+/** footer content btn - footer button 영역*/
+footer .footer-container .footer-content-btn {
+	margin-bottom: 20px;
+	width: 100%;
+	height: 100px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+footer .footer-container .footer-content-btn .btn-left {
+	width: 60%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+footer .footer-container .footer-content-btn .btn-left .footer-content-btn-item {
+	margin: 20px;
+	width: 100px;
+	height: 150px;
+
+	background-color: #fff;
+	border-radius: 20px;
+
+	box-shadow: 0 0 10px #fff;
+	transition: 0.5s ease-in-out;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	cursor: pointer;
+}
+
+footer .footer-container .footer-content-btn .btn-left .footer-content-btn-item:hover {
+	transition: 0.5s ease-in-out;
+
+	box-shadow: 0 0 10px #fff,
+	0 0 20px #fff,
+	0 0 30px #fff;
+}
+
+.footer-content-btn-item-img {
+	width: 40px;
+	height: 40px;
+	border: 3px solid #fff;
+	background-image: url('./icon/github.png');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.footer-content-btn-item-text {
+	font-size: 20px;
+	font-weight: 600;
+	color: #777;
 }
