--- a/src/css/style.css
+++ b/src/css/style.css
@@ -391,7 +391,7 @@
 }
 
 .main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:hover {
-	border: 2px solid #000;
+	/* border: 2px solid #000; */
 	transform: translate(-30px, -30px); /* 30px에서 15px로 이동 거리 감소 */
 	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15),
 	20px 20px 0 #fff, /* 40px에서 20px로 간격 감소 */
@@ -770,7 +770,7 @@ footer {
 	position: relative;
 	width: 100%;
 	height: 500px;
-	background-color: black;
+	background-color: #272626;
 	z-index: 100;
 }
 
@@ -869,7 +869,7 @@ footer .footer-container .footer-content .footer-btn {
 }
 
 .loading-hr.action-bar span::before {
-	animation: hr-bar 8s linear infinite;
+	animation: hr-bar 3s linear 1;
 }
 
 @keyframes hr-bar {
@@ -945,13 +945,11 @@ footer .footer-container .footer-content .footer-btn {
 	height: 0px;
 	opacity: 0;
 	transition: 0.8s ease-in-out;
-	transform: translateY(-250px);
 }
 
 .footer-container .footer-content p.footer-content.action-bar {
 	margin-top: 20px;
 	opacity: 1;
-	transform: translateY(0);
 	transition: 0.8s ease-in-out;
 }
 
@@ -962,81 +960,71 @@ footer .footer-container .footer-content-btn {
 	height: 100px;
 
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-}
-
-footer .footer-container .footer-content-btn .btn-area {
-	width: 40%;
-	height: 100%;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-}
-
-footer .footer-container .footer-content-btn .btn-area .footer-content-btn-item {
-	margin: 20px;
-	width: 100px;
-	height: 150px;
-
-	background-color: #fff;
-	border-radius: 20px;
-
-	box-shadow: 0 0 10px #fff;
-	transition: 0.5s ease-in-out;
-
-	display: flex;
 	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+}
+
+.footer-container .footer-content-btn .btn-area-first,
+.footer-container .footer-content-btn .btn-area-second {
+	width: 100%;
+	height: 100px;
+	margin: 10px;
+
+	display: flex;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+}
+
+.footer-container .footer-content-btn .btn-area-first .footer-content-btn-item,
+.footer-container .footer-content-btn .btn-area-second .footer-content-btn-item  {
+	width: 300px;
+	height: 50px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+
 
 	cursor: pointer;
 }
 
-footer .footer-container .footer-content-btn .btn-area .footer-content-btn-item:hover {
-	transition: 0.2s ease;
-
-	box-shadow: 0 0 10px #fff,
-	0 0 20px #fff,
-	0 0 30px #fff;
-}
-
-.btn-area .footer-content-btn-item-img {
-	width: 40px;
-	height: 40px;
-	border: 3px solid #fff;
+.footer-container .footer-content-btn .btn-area-first .footer-content-btn-item .footer-content-btn-item-img {
+	margin-right: 10px;
+	width: 50px;
+	height: 50px;
+	background-image: url('./icon/github.png');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
-.btn-area .footer-content-btn-item-text {
-	font-size: 20px;
-	font-weight: 600;
-	color: #777;
-	text-align: center;
+.footer-container .footer-content-btn .btn-area-second .footer-content-btn-item:nth-child(1) .footer-content-btn-item-img {
+	background-image: url('./img/cyci.png');
 }
 
-.btn-area.btn-left .footer-content-btn-item-img {
-	background-image: url('./icon/github.png');
+.footer-container .footer-content-btn .btn-area-second .footer-content-btn-item:nth-child(2) .footer-content-btn-item-img {
+	background-image: url('./img/koreaacademy.png');
 }
 
-
-/* 충남 도립대 */
-.btn-area.btn-right .footer-content-btn-item:nth-child(1) .footer-content-btn-item-img {
-	background-image: url('./icon/github.png');
-}
-
-/* 한국정보 교육원 */
-.btn-area.btn-right .footer-content-btn-item:nth-child(2) .footer-content-btn-item-img {
-	background-image: url('./icon/github.png');
-}
-
-/* 만든 이 */
-.btn-area.btn-right .footer-content-btn-item:nth-child(3) .footer-content-btn-item-img {
+.footer-container .footer-content-btn .btn-area-second .footer-content-btn-item:nth-child(3) .footer-content-btn-item-img {
 	background-image: url('./icon/user_creater.png');
 }
 
+.footer-container .footer-content-btn .btn-area-second .footer-content-btn-item .footer-content-btn-item-img {
+	margin-right: 10px;
+	width: 50px;
+	height: 50px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.footer-container .footer-content-btn div .footer-content-btn-item .footer-content-btn-item-text {
+	margin-left: 10px;
+	font-size: 25px;
+	color: #fff;
+	font-weight: bold;
+}
