--- a/src/css/style.css
+++ b/src/css/style.css
@@ -852,6 +852,101 @@
 	height: 150px;
 }
 
+
+/** game item, click - before */
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game {
+	position: relative;
+	margin: 20px;
+	width: 300px;
+	height: 500px;
+	
+	transition: 0.2s all;
+	cursor: pointer;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .imgBx {
+	width: 300px;
+	height: 300px;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .imgBx img {
+	width: 300px;
+	height: 500px;
+
+	animation: game-img-animation 3s linear infinite;
+
+	cursor: pointer;
+	transition: 0.2s ease;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .content {
+	position: absolute;
+	bottom: -40px;
+
+	width: 100%;
+	text-align: center;
+
+	transition: 0.2s ease;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .content .title {
+	font-size: 20px;
+	font-weight: bold;
+	color: #fff;
+}
+
+
+/**  game item, click, after */
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .imgBx img {
+	width: 300px;
+	height: 500px;
+
+	animation: none;
+
+	transform: scale(1.2);
+
+	transition: 2s ease;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .content {
+	position: absolute;
+	bottom: -40px;
+
+	width: 100%;
+	text-align: right;
+	transition: 1s ease;
+}
+
+.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .content .title {
+	font-size: 40px;
+	font-weight: bold;
+	color: var(--black-color);
+	text-shadow: -1px -1px 0 #fff,
+		1px -1px 0 #fff,
+		-1px 1px 0 #fff,
+		1px 1px 0 #fff;
+	transition: 0.5s ease;
+}
+
+@keyframes game-img-animation {
+	0% {
+		transform: rotate(0deg);
+	}
+	25% {
+		transform: rotate(15deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	75% {
+		transform: rotate(-15deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+
+
 /** footter 영역 */
 footer {
 	position: relative;
